--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@ body {
     <p>&nbsp;</p>
 	</div>
   </div>
+	
 </div>
+	<p>https://blog.csdn.net/csdnxws2923/article/details/51661254
+使用方法：将URL换成自己即可
+http://pan.baidu.com/share/qrcode?w=150&h=150&url=http://xiaofujin.ml
+http://b.bshare.cn/barCode?site=weixin&url=http://xiaofujin.ml
+http://s.jiathis.com/qrcode.php?url=http://xiaofujin.ml
+	</p>
 </body>
 </html>
